# bp-scraper

./: .gitignore  README.md  berkeley_project_best_contacts.csv  berkeley_project_companies.csv  berkeley_project_companies_short.csv  berkeley_project_contact_summary.md  companies_list.txt  filtered_big_companies.csv  filtered_test.csv  input.csv  input.example.csv  leads.csv  leads_refined.csv  leads_refined_2026-02-23.csv  pyproject.toml
src/leadfinder/: __init__.py  cli.py  constants.py  crawl.py  domain_resolver.py  extract.py  robots.py  store.py
tests/: __init__.py  conftest.py  test_extract.py  test_robots.py  test_store.py
