[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadfinder"
version = "1.0.0"
description = "Ethical sponsorship lead finder for student orgs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "LeadFinder" }]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "selectolax>=0.3.17",
    "sqlmodel>=0.0.14",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
leadfinder = "leadfinder.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
